--- a/report/sections/ch5-testing.tex
+++ b/report/sections/ch5-testing.tex
@@ -1,4 +1,4 @@
-To ensure that our prototype fulfills every requirement we set up in Chapter ~\ref{ch:problem_definition}, we set up some testing scenarios, which we used to test the functionalities of our prototype. These scenario are made out of several locations and setups:
+To ensure that our prototype fulfills all the requirements we set up in Chapter ~\ref{ch:problem_definition}, we set up some testing scenarios, which we used for testing the functionalities of our prototype. These scenario are made out of several locations and setups:
 \begin{itemize}
 	\item Room H101, H-building, AAU Esbjerg
 	\item Hallway, H-building, AAU Esbjerg
@@ -7,7 +7,7 @@ To ensure that our prototype fulfills every requirement we set up in Chapter ~\r
 	\item Reception Area, Main building, AAU Esbjerg
 \end{itemize}
 
-We will not cover each individual tests at all of the above listed location, but we will include the ones that are interesting or satisfying/dissatisfying our requirements.
+We will not cover each individual test at all of the above listed location, but we will include the ones that are interesting or have dissatisfied our requirements.
 
 The table below displays how well we achieved the testing goals set by us during Chapter \ref{ch:problem_definition}. We have only managed to achieve 1 out of the 3 original requirements.
 
@@ -29,35 +29,35 @@ The first test that was conducted on the rover, was to figure out what the measu
 
 \lstinputlisting[firstline=31, lastline=53, title=triple\_ultrasonic\_test.py, language=Python]{../code/autonomous-rover/triple-ultrasonic-test.py}
 
-The code above was used to test the distance measurements from the ultrasonic sensor. As shown on figure \ref{bs-read} and \ref{bs-test}, an object on the ruler was moved back and forth to find out where the point was just before the ultrasonic sensor would pick up the object.
+The code above was used to test the distance measurements from the ultrasonic sensor. As shown on figure \ref{fig:bs-read} and \ref{fig:bs-test}, an object on the ruler was moved back and forth to find out where the point was just before the ultrasonic sensor would pick up the object.
 
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}[H]{0.4\textwidth}
 		\includegraphics[width=\textwidth]{images/test-blindspotcmd.jpg}
 		\subcaption{Blind spot readings}
-		\label{bs-read}
+		\label{fig:bs-read}
 	\end{subfigure}%
 	\quad
 	\begin{subfigure}[H]{0.5\textwidth}
 		\includegraphics[width=\textwidth]{images/blindspot_test.jpg}
 		\subcaption{Measuring the blind spot}
-		\label{bs-test}
+		\label{fig:bs-test}
 	\end{subfigure}%
 	\quad
 \end{figure}
 
-
-Through testing we determined that the tipping point for the blind spot was at around 15cm. If the object used for the testing had been smaller in diameter, it would have been possible to get closer to the theoretical calculation (which is 19.8cm). Since the tipping spot was at length greater than 7.5cm (from figure \ref{calculationdiagram}, this then means that the ultrasonic sensors used for the particular project has a measuring angle of $15\degree$. \\
+Through testing we determined that the tipping point for the blind spot was at around 15cm. If the object used for the testing had been smaller in diameter, it would have been possible to get closer to the theoretical calculation (which is 19.8cm). Since the tipping spot was at length greater than 7.5cm (from figure \ref{fig:calculationdiagram}, this then means that the ultrasonic sensors used for the particular project has a measuring angle of $15^\circ$. 
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{images/testing-course.jpg}
 	\caption{The testing course}
-	\label{testcourse}
+	\label{fig:testcourse}
 \end{figure}
 
-The testing course had been created arbitrarily, with the purpose of placing some random objects for the rover to detect, avoid and navigate around.\\
+The testing course had been created arbitrarily, with the purpose of placing some random objects for the rover to detect, avoid and navigate around.
+
 The rover was tested using different threshold distances, which means that the rover will sense objects and walls according to that set threshold. When the distance was set to a lower length (e.g. 20cm), the rover would get really close to objects before determining a new path, this occasionally also led to the rover hitting some of the objects or the walls of the test course. If the distance threshold is set to a higher value (e.g. 50cm), the rover has an easier time navigating/avoiding objects in its path, the downside is though that with such a great distance, the rover never reaches certain parts of the course, because it often detects too many nearby objects and therefore never approaches certain areas. The rover would also sometimes get stuck in the middle of an open space, oscillating  left and right whilst slowly moving forward, the cause of this is because each time the the rover turned in one direction the rover detected a new object within a short distance, and immediately turns again - continuing in an endless loop.
 
 \begin{figure}[H]
@@ -65,18 +65,19 @@ The rover was tested using different threshold distances, which means that the r
 	\begin{subfigure}[H]{0.4\textwidth}
 		\includegraphics[width=\textwidth]{images/test-stuckincorner.jpg}
 		\subcaption{Rover stuck in a corner}
-		\label{corner}
+		\label{fig:corner}
 	\end{subfigure}%
 	\quad
 	\begin{subfigure}[H]{0.4\textwidth}
 		\includegraphics[width=\textwidth]{images/test-badmeasuringangle.jpg}
 		\subcaption{Bad angle for measurements}
-		\label{badangle}
+		\label{fig:badangle}
 	\end{subfigure}
 \end{figure}
 
-The current algorithm for the rover gets stuck in a loop if the rover drives directly into a corner(figure \ref{corner}). The reason for the looping is that the distance towards to wall of either side of the rover are equal, so it can not determine which direction it should steer towards.\\
-Because of the skewed angles of the object in the test course, the rover would sometimes hit them. Figure \ref{badangle} clearly shows the rover hitting the object face on, because the ultrasonic sensors were not able to read the distance to the walls of the box because they are at a bad angle.
+With the current algorithm, the rover gets stuck in a loop if the rover drives directly into a corner(figure \ref{fig:corner}). The reason for the looping is that the distance towards to wall of either side of the rover are equal, so it can not determine which direction it should steer towards.
+
+Because of the skewed angles of the object in the test course, the rover would sometimes hit them. Figure \ref{fig:badangle} clearly shows the rover hitting the object face on, because the ultrasonic sensors were not able to read the distance to the walls of the box because they are at a bad angle.
 
 When the rover would turn to avoid objects or change its direction, it would skid across the floor. This resulted in the rover not turning on the spot, which reduces the accuracy of the steering.
 
@@ -84,65 +85,67 @@ When the rover would turn to avoid objects or change its direction, it would ski
 \section{2D Mapping}
 
 \subsection{Indoor test}
-In order to test how well our mapping can keep the relation between objects, we made a small setup on a table in room H101. We placed the laser on the edge of the table, and set a laptop, a small box, and two sponges, at varying distances from the center of the laser, trying to keep their faces perpendicular to the laser. We then roughly measured the distances.\\
-To gather data from the laser, it was roughly run for 2 minutes or 4 full rotations,  since it took 30 seconds to collect $360\degree$'s worth of measurements.
+In order to test how well our mapping can keep the relation between objects, we made a small setup on a table in room H101. We placed the laser on the edge of the table, and set a laptop, a small box, and two sponges, at varying distances from the center of the laser, trying to keep their faces perpendicular to the laser. We then roughly measured the distances.
+
+To gather data from the laser, it was roughly run for 2 minutes or 4 full rotations, since it took 30 seconds to collect $360^\circ$'s worth of measurements.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.4]{images/h101-photo.jpg}
 	\caption{A photo of room H101 that was mapped}
-	\label{laser-test}
+	\label{fig:laser-test}
 \end{figure}
 	
 This figure shows an overhead view what the setup was, with the addition of some distances. For this particular testing location we also made sure that the laser would not hit any windows, since those are considered specular surfaces and it would be impossible or at least very difficult for the LIDAR-Lite laser to detect it.
 
-We let the laser gather enough data, such that there was no noticeable interference from us moving around inside of the room. We then took a screenshot of the map that had been produced, which the was compared it to figure \ref{laser-test}. First by estimating distances on the picture, then by digitally overlaying the two images.
+We let the laser gather enough data, such that there was no noticeable interference from us moving around inside of the room. We then took a screenshot of the map that had been produced, which the was compared it to figure \ref{fig:laser-test}. First by estimating distances on the picture, then by digitally overlaying the two images.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.4]{images/h101_obstacles_overlay.png}
 	\caption{A map of room H101 with some small obstacles}
-	\label{laser-compare}
+	\label{fig:laser-compare}
 \end{figure}
 	
-Figure \ref{laser-compare} shows the map generated by the laser, roughly overlayed with the picture from the test course in figure \ref{laser-test}. From the comparison its clear that the generated map keeps the same aspect-ratio of the physical world that it is mapping. The data used for this particular map is purely point data.
+Figure \ref{fig:laser-compare} shows the map generated by the laser, roughly overlayed with the picture from the test course in figure \ref{fig:laser-test}. From the comparison its clear that the generated map keeps the same aspect-ratio of the physical world that it is mapping. The data used for this particular map is purely point data.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.5\linewidth]{images/compare.jpg}
 	\caption{Room-plan of H101, H-building, AAU Esbjerg}
-	\label{h101hector}
+	\label{fig:h101hector}
 \end{figure}
-%TODO: Image used twice, what should we do? Both places has context to it (other is Ch4. Hector slam)
+%TODO: Image used twice, what should we do? Both places has context to it (other one is in Ch4. Hector-slam)
 
-Figure \ref{h101hector} shows another test using hector slam, instead of pointing out data from the previous test. This test was conducted without the use of obstacles, since we had a floor plan supplied by Aalborg Universitet Esbjerg to compare it to. The room H101 in H-building, has a feature in the bottom right corner. This feature is also noticeable on the map created using hector slam.\\
+Figure \ref{fig:h101hector} shows another test using hector slam, instead of pointing out data from the previous test. This test was conducted without the use of obstacles, since we had a floor plan supplied by Aalborg Universitet Esbjerg to compare it to. The room H101 in H-building, has a feature in the bottom right corner. This feature is also noticeable on the map created using hector slam.
+
 The map has a single point which is traced out of the picture, this is from the laser reflecting poorly on a single spot along the aluminum from on blackboard, which was mounted in room H101.
 
 \subsection{Outdoor test}
 The outside tests were conducted between H-building, the main building and Idea House, located on the Esbjerg campus of Aalborg Universitet. The laptop with the laser module was placed on the benches between the above mentioned area and a scan was run for approximately 4 minutes.
-%TODO: How much time did the outdoor scan took?
+%TODO: How much time did the outdoor scan took? Please change in the last sentance
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\linewidth]{images/lidar_outside_site.jpg}
 	\caption{The site for the outdoor testing}
-	\label{outsideslam}
+	\label{fig:outsideslam}
 \end{figure}
 
-While running testing outside in areas with distances longer than 40 m the laser outputted a measurement of 255 cm. The reason behind this is that if the laser does not get a signal back it prints a error message with the integer 255. If that is not dealt with in the code the $/$scan topic will output a measurement of 2.55 m. We included a if statement that write 0 if a message with 255 is received, to temporarily fix the issue and get a correct 2D map generated. 
+While running testing outside in areas with distances longer than 40m the laser outputted a measurement of 255cm. The reason behind this is that if the laser does not get a signal back it prints a error message with the integer 255. If that is not dealt with in the code the \textbackslash scan topic will output a measurement of 2.55m. We included a if statement that write 0 if a message with 255 is received, to temporarily fix the issue and get a correct 2D map generated. 
 
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}[H]{0.45\textwidth}
 		\includegraphics[width=\textwidth]{images/outside_error.png}
 		\subcaption{Circular error present}
-		\label{}
+		\label{fig:outdoorerror}
 	\end{subfigure}%
 	\quad
 	\begin{subfigure}[H]{0.5\textwidth}
 		\includegraphics[width=\textwidth]{images/outside.png}
 		\subcaption{No more circular error, dots representing people, objects in the middle}
-		\label{}
+		\label{fig:outdoornoerror}
 	\end{subfigure}%
 	\quad
 \end{figure}
